--- a/journal/202212.md
+++ b/journal/202212.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – December 2022
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![](../img/202212.1.768.png)
 
-_Image: { "Title by @author. Description..." OR just "Description..." }_
+_Image: Bison Relay artwork by @saender_
 
 December's highlights: {
 
@@ -110,7 +110,7 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 - Introduced voting for [individual TSpends](https://github.com/decred/decrediton/pull/3787). If any tickets are managed by VSPs, changed ticket vote preferences will be sent to the VSPs. If new unvoted TSpends are detected, a notification will be shown on the home page. Existing voting policies for treasury keys and individual TSpends will be shown on ticket details page.
 - Expanded automated UI test coverage.
 
-![](https://user-images.githubusercontent.com/52497040/180845615-8b64fa03-a1cd-4f55-9de4-a5e64f42c6df.png) { _upload_ }
+![](../img/202212.2.full.png)
 
 _Image: TSpend voting in Decrediton._
 
@@ -166,7 +166,7 @@ Other client changes:
 - Fixed handling of the [Pre-size Funds](https://github.com/decred/dcrdex/pull/1988) option. This option creates an extra "split transaction" to prepare an exact amount of funds needed for the order, which avoids locking more funds than needed, but at the cost of additional fees to pay for the split. The fix avoids the pre-sizing transaction when there is no benefit. Also, the UX is made more consistent by always showing the option but explaining why it was turned off. Finally, another fix disables pre-sizing for [immediate market orders](https://www.investopedia.com/terms/i/immediateorcancel.asp) since they must execute quickly.
 - Other fixes.
 
-![](https://user-images.githubusercontent.com/9373513/207747259-67e5dab5-0db6-48b1-9f70-e0bdc12ad25d.png) { _upload_ }
+![](../img/202212.3.full.png)
 
 _Image: First trade between USDC and DCR on testnet._
 
@@ -187,7 +187,7 @@ Developer and API changes:
 - Removed the requirement to run dcrd with address index enabled because it was [removed from dcrd](https://github.com/decred/dcrd/pull/2930). Usage of dcrd's `searchrawtransactions` method (which depends on the address index) was removed in favor of dcrdata's own database that has all the necessary information.
 - Added two fields to the [transaction data API](https://github.com/decred/dcrdata/pull/1946): `tree` (Decred blocks store transactions in regular and stake trees) and `type` (Decred transactions can be `regular`, `ticket`, `vote`, `revocation`, `coinbase`, `treasurybase`, `treasury add`, `treasury spend`).
 
-![](https://user-images.githubusercontent.com/57448127/174891778-22ed05a0-7ced-447c-b3ef-28840d2d22a6.png) { _replace with better image, upload_ }
+![](../img/202212.4.full.png)
 
 _Image: dcrdata, now it is easier to track TSpend voting progress._
 
@@ -286,7 +286,7 @@ There were no new proposals published on Politeia in December.
 
 **Hashrate**: December's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~67 Ph/s and closed ~68 Ph/s, bottoming at 58 Ph/s and peaking at 91 Ph/s throughout the month.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Network_Daily_Hashrate.png) { _upload_ }
+![](../img/202212.5.720.png)
 
 _Image: Decred hashrate._
 
@@ -294,11 +294,11 @@ Distribution of 75 Ph/s hashrate [reported](https://miningpoolstats.stream/decre
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Jan 4: Poolin 55%, F2Pool 36%, likely BTC.com 5%, likely AntPool 2.6%, CoinMine 0.4%, unknown 0.9%.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Hashrate%20Distribution%20(Phs).png) { _upload_ }
+![](../img/202212.6.720.png)
 
 _Image: Pool hashrate distribution._
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Daily_Hash_Dist.png) { _upload_ }
+![](../img/202212.7.720.png)
 
 _Image: Historical pool hashrate distribution._
 
@@ -310,17 +310,17 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 Biggest gainers in December are vspd.bass.cf (+371), big.decred.energy (+179) and vspd.99split.com (+178).
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload_ }
+![](../img/202212.8.720.png)
 
 _Image: Distribution of tickets managed by VSPs._
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 79 dcrd nodes on Jan 1: v1.7.5 - 27%, v1.7.1 - 27%, v1.8.0 dev builds - 23%, v1.7.2 - 11%, v1.7.0 - 6%, v1.7.4 - 2.5%, other - 4%.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Reachable%20Node%20Versions.png) { _upload_ }
+![](../img/202212.9.720.png)
 
 _Image: Reachable dcrd node versions._
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2022-12/700/Daily_NodeDistribution.png) { _upload_ }
+![](../img/202212.10.720.png)
 
 _Image: Historical dcrd version distribution, data from nodes.jholdstock.uk._
 
@@ -434,7 +434,7 @@ In December DCR was trading between USDT $18.20-$24.80 and BTC 0.00110-0.00145. 
 
 The new DCR/USDT market on Poloniex has seen around 1,070 DCR daily average volume, much higher than 230 DCR/day on the old DCR/BTC pair. Interestingly, DCR/BTC market was frozen for the first week while DCR/USDT was active.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-12/700/DEX_Monthly_Vol_USD.png) { _upload_ }
+![](../img/202212.11.720.png)
 
 _Image: DCRDEX monthly volume in USD._
 
@@ -485,5 +485,5 @@ Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: davecgh, jholdstock, JoeGruff
-- title image: {}
+- title image: saender
 - funding: Decred stakeholders
