--- a/journal/202301.md
+++ b/journal/202301.md
@@ -155,8 +155,13 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 Client changes:
 
 - Updated [web dependencies](https://github.com/decred/dcrdex/pull/1996).
-- Updated Docker config: [optimized base images](https://github.com/decred/dcrdex/pull/2030) and switched DEX client to [run as non-root user](https://github.com/decred/dcrdex/pull/2035). This will help to integrate the DEX client into Umbrel.
+- Updated Docker config: [optimized base images](https://github.com/decred/dcrdex/pull/2030), switched DEX client to [run as non-root user](https://github.com/decred/dcrdex/pull/2035), and [excluded unneeded files](https://github.com/decred/dcrdex/pull/2077). Among other things it helps to integrate the DEX client into Umbrel. { prop link }
 - Allow to [acknowledge and hide](https://github.com/decred/dcrdex/pull/2044) the warning to keep the DEX client running until all trades settle.
+- Improved checkbox UX with [uniform style](https://github.com/decred/dcrdex/pull/2002) across all forms.
+- Show [which wallet](https://github.com/decred/dcrdex/pull/2071) is missing if it was not found on startup.
+- Added consistent [border](https://github.com/decred/dcrdex/pull/2070) to all input fields, drop downs, and checkboxes.
+- Save some [user preferences](https://github.com/decred/dcrdex/pull/1975) across page switches/refreshes and DEX client restarts. Things like hide/show left market dock or select chosen wallet on the Wallets page.
+- Show base assets in [superscript](https://github.com/decred/dcrdex/pull/2089) in the market header. { _minor, merge or drop_ }
 
 Client fixes:
 
@@ -164,21 +169,44 @@ Client fixes:
 - Improved detection and handling of refund transactions that were [broadcast manually](https://github.com/decred/dcrdex/pull/2011) outside of the DEX client.
 - Fixed launch failure on [32-bit systems](https://github.com/decred/dcrdex/pull/2031).
 - Fixed directory paths that blocked built-in SPV wallets created in v0.5 from upgrading in the upcoming v0.6.
+- Fixed creation of [Decred SPV](https://github.com/decred/dcrdex/pull/2093) wallet over RPC. { _minor, merge_ }
+- Fixed { 2082 2083 2079 } data races and { 2078 } deadlocks in the client. { _maybe present collectively as 'concurrency bugs'_ }
 
 Server fixes:
 
 - Avoid a [deadlock](https://github.com/decred/dcrdex/pull/2021) after receiving maker's redeem ack.
+- Added a sanity check to never send [swaps with zero fee rate](https://github.com/decred/dcrdex/pull/2060).
 
 Other changes:
 
 - Updated the [Fundamentals](https://github.com/decred/dcrdex/pull/2001) spec page.
+- Moved [compatibility checks](https://github.com/decred/dcrdex/pull/2052) to `dex/networks` package. { _minor, merge_ }
+- https://github.com/decred/dcrdex/pull/2061 { _minor, drop_ }
 
 Ethereum:
 
-- Removed the [recently added](https://github.com/decred/dcrdex/pull/2047) `authrpc` interface in favor of the unauthenticated `http` and `ws` interfaces. `authrpc` was found to be [unnecessarily limiting](https://github.com/decred/dcrdex/issues/2016#issuecomment-1369091909) by not having methods to inspect the mempool and calculate the most recent balance. At the same time not much was gained from using it in the DEX. For DEX use cases, it makes more sense to connect to Geth with either IPC or `--http` / `--ws`. In the future, authenticated RPC support may still be needed for getting Ethereum data from trusted third party RPC providers. This could greatly simplify testing because running Ethereum full node is [too difficult](https://github.com/decred/dcrdex/pull/2020#discussion_r1081309070).
+- Removed the [recently added](https://github.com/decred/dcrdex/pull/2047) `authrpc` interface. It was found to be [unnecessarily limiting](https://github.com/decred/dcrdex/issues/2016#issuecomment-1369091909) by not having methods to inspect the mempool and calculate the most recent balance. At the same time not much was gained from using it in the DEX. For DEX use cases, it makes more sense to connect to Geth with either IPC or `--http` / `--ws`. In the future, authenticated RPC support may still be needed for getting Ethereum data from trusted third party RPC providers. This could greatly simplify testing because running Ethereum full node is [too difficult](https://github.com/decred/dcrdex/pull/2020#discussion_r1081309070).
 - Always check [block header timestamp](https://github.com/decred/dcrdex/pull/2034) to determine sync status. Since Ethereum's "Merge" event, Geth will report the current block and highest block as the same number, so the difference between them can no longer be used to determine sync progress. Instead, DEX will compare last block header time to user's system clock, and if the block is old enough the chain will be assumed as not synced.
 - Improved display of [Maker Redemption](https://github.com/decred/dcrdex/pull/1978) in cases when the exact transaction is not known.
-- Added support for DEX server to connect to Geth over `http` and `ws` interfaces.
+- Added DEX server ability to connect to Geth over [HTTP and WebSocket](https://github.com/decred/dcrdex/pull/2047) interfaces.
+- Added [timeouts](https://github.com/decred/dcrdex/pull/2051) to RPC requests so that very long requests to RPC providers could expire and be cancelled.
+- Do not consider pending (unmined) transactions when calculating balance if the RPC provider lacks the [required methods](https://github.com/decred/dcrdex/pull/2059) to do so.
+- Only check [swap fees](https://github.com/decred/dcrdex/pull/2062) after they get some confirmations (speed optimization).
+- Fixed wallet config [not being saved](https://github.com/decred/dcrdex/pull/2055) after the Reconfigure operation.
+- Fixed missing [Settings button](https://github.com/decred/dcrdex/pull/2053) for ERC-20 tokens.
+- Fixed min/max [fee estimates](https://github.com/decred/dcrdex/pull/2057) shown for swaps with "token" assets. Fees for swapping tokens are paid in base asset. For example, when buying DCR for USDC, fees for the USDC side of the trade are paid in ETH.
+
+In progress:
+
+- [DigiByte](https://github.com/decred/dcrdex/pull/1993) (DGB) support.
+
+{ image candidates: 2057 }
+
+![](https://user-images.githubusercontent.com/6186350/213787303-ef69348c-ea26-46c0-a166-5893a1f73a2e.png) { upload, crop, merge in 1 pic }
+
+![](https://user-images.githubusercontent.com/6186350/213787306-8a5f1cfc-3925-433d-b064-9a3ee6f1e032.png) { upload, crop, merge in 1 pic }
+
+_Image: Improved fee estimation for tokens in DCRDEX._
 
 
 ### Documentation
