--- a/journal/202302.md
+++ b/journal/202302.md
@@ -47,9 +47,9 @@ v0.5.9 was released with v0.6 just around the corner to enable automatically dep
 - Protections against zero fee swaps.
 - Improved performance.
 - Cleaned up logging.
-- Fixed about a dozen of edge cases.
+- Fixed about a dozen edge cases.
 
-Full release notes and standalone DEX app downloads can be found [here](https://github.com/decred/dcrdex/releases). Hashes and signatures are included that allow to [verify](https://docs.decred.org/advanced/verifying-binaries) the downloads have not been damaged or modified by third parties.
+Full release notes and standalone DEX app downloads can be found [here](https://github.com/decred/dcrdex/releases). Hashes and signatures are included that allow for [verification](https://docs.decred.org/advanced/verifying-binaries) that downloads have not been damaged or modified by third parties.
 
 
 ## Bison Relay v0.1.4 Release
@@ -84,7 +84,7 @@ Most changes focused on making consensus deployment code more robust and easier 
 
 - Reworked [consensus deployment](https://github.com/decred/dcrd/pull/3056) validation logic and tests to make it easier to modify and bring it more in line with the more modern coding practices used in the codebase. Terms "deployment" and "agenda" refer to [consensus vote definitions](https://github.com/decred/dcrd/blob/974b1b3ccc7393c5450d75f1f58b75b80020cc3b/chaincfg/mainnetparams.go#L139) that include description, vote choices, validity period, and other details.
 - Enforce [globally unique vote IDs](https://github.com/decred/dcrd/pull/3057) for different agendas. Technically it was not incorrect to reuse vote IDs, however various software in the Decred ecosystem implicitly assumes that IDs are unique across all agendas. This unwritten rule is now formalized to prevent confusion and simplify code dealing with it.
-- Simplified code that tracks the status [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
+- Simplified code that tracks the status of [consensus rule changes](https://github.com/decred/dcrd/pull/3059).
 - Added a network parameter to [force consensus votes](https://github.com/decred/dcrd/pull/3060) to certain outcomes and activate their features accordingly. This has already been used on testing networks to quickly test features without going through an entire voting process. The way it worked though was found to be surprising behavior: "if deployment is not found in parameters for a given network, it is considered active". Other issues included complexity of testing the voting process itself, and such implicitly forced votes being invisible in commands like `getblockchaininfo`. All these issues were fixed and it is now easier to locate forced rules in the code. A safety check was also added to ensure the forced vote choices cannot be used on the main network.
 
 Docker:
@@ -105,7 +105,7 @@ Other:
 
 _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by command-line and graphical wallet apps._
 
-- Fixed a deadlock in [address discovery](https://github.com/decred/dcrwallet/pull/2204) that could be triggered by poorly timed `getnewaddress` command.
+- Fixed a deadlock in [address discovery](https://github.com/decred/dcrwallet/pull/2204) that could be triggered by a poorly timed `getnewaddress` command.
 - Updated the [`addrmgr` module](https://github.com/decred/dcrwallet/pull/2206) from dcrd for performance improvements under SPV mode when few quality peers are available.
 - Updated [golang.org/x modules](https://github.com/decred/dcrwallet/pull/2209), including newer `x/sys` to support building on [OpenBSD](https://github.com/decred/dcrwallet/pull/2208) running on riscv64 CPU.
 
@@ -366,7 +366,7 @@ _Image: Drop and recovery of DCR locked in PoS._
 
 **VSP**: The [16 listed VSPs](https://decred.org/vsp/) collectively managed ~7,410 (-980) live tickets, which was 18.4% of the ticket pool (-0.4%) as of Mar 1.
 
-The only gainers in February were dcrhive.com (+383 tickets or +74%) and vsp.decredcommunity.org (+202 tickets or +38%). The other 14 VSPs lost ~25% tickets on average, but the loss should be considered in context of the ticket pool size correcting from abnormal ~44,880 down to its target of 40,960 ticket.
+The only gainers in February were dcrhive.com (+383 tickets or +74%) and vsp.decredcommunity.org (+202 tickets or +38%). The other 14 VSPs lost ~25% tickets on average, but the loss should be considered in context of the ticket pool size correcting from abnormal ~44,880 down to its target of 40,960 tickets.
 
 ![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload 202302.8_ }
 
