--- a/journal/202302.md
+++ b/journal/202302.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – February 2023
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![](../img/202302.1.768.png)
 
-_Image: Decred Cake 2023 by @arij and @Exitus_ { _upload 202302.1_ }
+_Image: Decred Cake 2023 by @arij and @Exitus_
 
 Highlights of February:
 
@@ -306,13 +306,13 @@ In February the new [treasury](https://dcrdata.decred.org/treasury) received 7,6
 
 The [treasury spend tx](https://explorer.dcrdata.org/tx/e09505dbb877e5efdd184129858be5655a3de235cdac2cfa749442f0ccf7de81) had 27 outputs making payments to contractors, ranging from 3 DCR to 1,084 DCR. Most of this DCR was likely paid for December invoices, there is now a persistent lag between the end of the month and the creation of the TSpend for that month, so that by the time transactions are approved by stakeholders it is typically two months after the month when work was conducted.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Treasury_Inflows_Outflows_DCR.png) { _upload 202302.2_ }
+![](../img/202302.2.720.png)
 
 _Image: Decred Treasury monthly inflows and outflows._
 
 As of Mar 14, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 844,504 DCR (16.8 million USD at $19.88).
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Treasury_Balance_DCR.png) { _upload 202302.3_ }
+![](../img/202302.3.720.png)
 
 _Image: Decred Treasury balance history._
 
@@ -323,7 +323,7 @@ There were no new proposals published in Feb, and the proposals which finished v
 
 **Hashrate**: February's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~73 Ph/s and closed ~71 Ph/s, bottoming at 60 Ph/s and peaking at 83 Ph/s throughout the month.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Network_Daily_Hashrate.png) { _upload 202302.4_ }
+![](../img/202302.4.720.png)
 
 _Image: Decred hashrate._
 
@@ -331,7 +331,7 @@ Distribution of 66 Ph/s hashrate [reported](https://miningpoolstats.stream/decre
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Mar 1: Poolin 54%, F2Pool 36%, AntPool 6%, likely BTC.com 4%.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Daily_Hash_Dist.png) { _upload 202302.5_ }
+![](../img/202302.5.720.png)
 
 _Image: Historical pool hashrate distribution._
 
@@ -339,13 +339,13 @@ _Image: Historical pool hashrate distribution._
 
 After a dramatic drop to 140 DCR in January ticket price skyrocketed to set a new all-time high of **496.5 DCR**. It returned to normal levels a week later and settled around 230 DCR.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Staking_Daily_TicketPrice_DCR.png) { _upload 202302.6_ }
+![](../img/202302.6.720.png)
 
 _Image: Ticket price made its biggest swing in history._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 8.76-9.69 million DCR, meaning that 58.5-64.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake. This was also more volatile than usual.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Staking_Daily_TicketPoolVal_DCR.png) { _upload 202302.7_ }
+![](../img/202302.7.720.png)
 
 _Image: Drop and recovery of DCR locked in PoS._
 
@@ -353,13 +353,13 @@ _Image: Drop and recovery of DCR locked in PoS._
 
 The only gainers in February were dcrhive.com (+383 tickets or +74%) and vsp.decredcommunity.org (+202 tickets or +38%). The other 14 VSPs lost ~25% tickets on average, but the loss should be considered in context of the ticket pool size correcting from abnormal ~44,880 down to its target of 40,960 tickets.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload 202302.8_ }
+![](../img/202302.8.720.png)
 
 _Image: Distribution of tickets managed by VSPs._
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed between 175 and 188 dcrd nodes throughout the month. Versions of 176 nodes seen on Mar 1: v1.7.5 - 34%, v1.7.2 - 22%, v1.8.0 dev builds - 13%, v1.7.2 - 11%, v1.7.0 - 10%, v1.7.4 - 3%, other - 7%.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Daily_NodeDistribution.png) { _upload 202302.9_ }
+![](../img/202302.9.720.png)
 
 _Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. Data until Jan 2023 was incomplete._
 
@@ -367,11 +367,11 @@ The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&z
 
 Since a large portion of mixed coins comes from staking, the drop of staked DCR has resulted in a drop of mixed volume as well. It went back to normal towards the end of February as stake participation recovered.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Stakeshuffle_Daily_MixedUnspent_PC.png) { _upload 202302.10_ }
+![](../img/202302.10.720.png)
 
 _Image: Drop and recovery of mixed and unspent coin percentage._
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/Stakeshuffle_Daily_Volume_DCR.png) { _upload 202302.11_ }
+![](../img/202302.11.720.png)
 
 _Image: Daily mix volume varied more than usual._
 
@@ -401,7 +401,7 @@ Commentary on Decred Magazine was originally drafted for a crypto publication bu
 
 - @arij organized a celebration of Decred's 7th anniversary at Technopark Casablanca for around 60 guests. The event began with a presentation of the project and its major milestones over the years, followed by remarks from the project's partners. New version of Decred Cake was spotted at the party. See more details in the [report](https://decredcommunity.github.io/events/index/20230205.1).
 
-{ image: https://twitter.com/khalidesitra/status/1622964040640208898 -> 2nd photo as 202302.12 }
+![](../img/202302.12.720.jpg)
 
 
 ## Media
@@ -482,7 +482,7 @@ Twitter Spaces:
 
 In February DCR was trading between USDT 21.71-28.52 and BTC 0.00095-0.00121. The average daily rate was $24.03.
 
-![](https://github.com/bochinchero/dcrsnapshots/raw/main/2023-02/700/DEX_Monthly_Vol_USD.png) { _upload 202302.13_ }
+![](../img/202302.13.720.png)
 
 _Image: DCRDEX monthly volume in USD._
 
