--- a/journal/202303.md
+++ b/journal/202303.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – {month} {year}
+# {DRAFT} Decred Journal – March 2023
 
 { _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
 
@@ -278,7 +278,6 @@ Welcome the new first-time contributors:
 
 Community stats as of {date} (compared to {date}):
 
-- Politeia users: {} (+{})
 - [Twitter](https://twitter.com/decredproject) followers: {} (+{})
 - [Reddit](https://www.reddit.com/r/decred/) subscribers: {} (+{})
 - [Matrix](https://chat.decred.org/) #general users: {} (+{})
@@ -293,7 +292,7 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In {month} the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at {month}'s average rate of ${}. {} DCR was spent to pay contractors, worth ${} at {month}'s rate, or ${} at {prev month}'s billing rate of ${}.
+In March the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at March's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at March's rate, or ${} at {invoice month}'s billing rate of ${}.
 
 The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
 
@@ -316,7 +315,7 @@ See Politeia Digest [issue {}]({}) for more details on the month's proposals.
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: {month}'s [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: March's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
 
 Distribution of {} Ph/s hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
@@ -435,7 +434,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Markets
 
-In {month} DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-{ five decimals }. The average daily rate was ${n.nn}.
+In March DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-{ five decimals }. The average daily rate was ${n.nn}.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis. Check here:_
 
@@ -463,18 +462,18 @@ In {month} DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-
 
 { _Other: Regulations, privacy, security, fun._ }
 
-That's all for {month}. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
+That's all for March. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
 
 ## About
 
-This is issue {number} of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
+This is issue 57 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from the source after a minimal sanity check. The authors of the Decred Journal cannot verify all claims. Please beware of scams and do your own research.
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: {}
+- writing, editing, publishing: { bee, bochinchero, Exitus, jz, karamble?, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: {}
 - title image: {}
 - funding: Decred stakeholders
