--- a/journal/202303.md
+++ b/journal/202303.md
@@ -1,6 +1,6 @@
 # {DRAFT} Decred Journal – March 2023
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![]() { _upload 202303.1_ }
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
@@ -217,7 +217,7 @@ Other stuff:
 
 ![](https://user-images.githubusercontent.com/9373513/225440866-8a727ad5-54fa-4ae4-bdb2-b88100eb4a9e.png) { _upload_ }
 
-![](https://user-images.githubusercontent.com/9373513/225440880-34c1de8f-f075-4a10-a369-04b21bd15816.png) { _upload_ }
+![](https://user-images.githubusercontent.com/9373513/225440880-34c1de8f-f075-4a10-a369-04b21bd15816.png) { _merge and upload 202303.2_ }
 
 _Image: UI updates in DCRDEX to replace registration fees with time-locked bonds. UI design is a work in progress. DCR amounts shown are not real._
 
@@ -360,7 +360,7 @@ Politeia Digest is available on: [Block Commons](https://blockcommons.red/polite
 
 **Hashrate**: March's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~71 Ph/s and closed ~73 Ph/s, bottoming at 64 Ph/s and peaking at 83 Ph/s throughout the month.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Network_Daily_Hashrate.png) { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Network_Daily_Hashrate.png) { _upload 202303.3_ }
 
 _Image: Decred hashrate._
 
@@ -368,19 +368,19 @@ Distribution of 74 Ph/s hashrate [reported](https://miningpoolstats.stream/decre
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Apr 3: Poolin 44%, F2Pool 43%, AntPool 9%, BTC.com 3%.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Daily_Hash_Dist.png) { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Daily_Hash_Dist.png) { _upload 202303.4_ }
 
 _Image: Historical pool hashrate distribution._
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 223-254 DCR.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Staking_Daily_TicketPrice_DCR.png) { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Staking_Daily_TicketPrice_DCR.png) { _upload 202303.5_ }
 
 _Image: Ticket price has stabilized._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&scale=linear&bin=day&axis=time) was 9.64-9.83 million DCR, meaning that 64.0-65.2% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&scale=linear&bin=day&axis=time) in Proof of Stake.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Staking_Daily_TicketPoolVal_DCR.png)  { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Staking_Daily_TicketPoolVal_DCR.png)  { _upload 202303.6_ }
 
 _Image: DCR locked in tickets keeps crawling up._
 
@@ -388,19 +388,19 @@ _Image: DCR locked in tickets keeps crawling up._
 
 Biggest gainers in March were ubiqsmart.com (280 tickets or +155%) and dcrhive.com (+225 tickets or +25%).
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { _upload 202303.7_ }
 
 _Image: Distribution of tickets managed by VSPs._
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed between 162 and 176 dcrd nodes throughout the month. Versions of 166 nodes seen on Apr 1: v1.7.5 - 36%, v1.7.1 - 21%, v1.8.0 dev builds - 13%, v1.7.2 - 13%, v1.7.0 - 8%, v1.7.4 - 4%, other - 7%.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Daily_NodeDistribution.png) { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Daily_NodeDistribution.png) { _upload 202303.8_ }
 
 _Image: Historical dcrd version distribution, data from nodes.jholdstock.uk. Data until Jan 2023 was incomplete._
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.5-61.1%. Daily [mixed volume](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 317-495K DCR.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Stakeshuffle_Daily_MixedUnspent_DCR.png) { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/Stakeshuffle_Daily_MixedUnspent_DCR.png) { _upload 202303.9_ }
 
 _Image: Mixed supply has recovered from a brief drop._
 
@@ -511,11 +511,11 @@ Livestream:
 
 In March DCR was trading between USDT 17.53-25.90 and BTC 0.00068-0.00102. The average daily rate was $20.69.
 
-![]({}) { _upload image 1 from https://twitter.com/applesaucesome1/status/1639889450942570496 _ }
+![]({}) { _upload 202303.10, image 1 from https://twitter.com/applesaucesome1/status/1639889450942570496 _ }
 
 _Image: Applesaucesome is bullish. Follow on [Twitter](https://twitter.com/applesaucesome1) for more._
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/DEX_Monthly_Vol_USD.png) { _upload_ }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2023-03/700/DEX_Monthly_Vol_USD.png) { _upload 202303.11_ }
 
 _Image: DCRDEX monthly volume in USD._
 
@@ -567,7 +567,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, karamble?, l1ndseymm, phoenixgreen, richardred }
+- writing, editing, publishing: bee, bochinchero, Exitus, jz, karamble, l1ndseymm, phoenixgreen, richardred
 - reviews and feedback: davecgh
-- title image: { Exitus }
+- title image: Exitus
 - funding: Decred stakeholders
